--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest",
+    "tsc": "tsc",
+    "test:build": "vitest run",
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
