--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "vitest",
     "tsc": "tsc",
     "test:build": "vitest run",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "postbuild": "@powershell copy 'dist/index.html' 'dist/200.html'"
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
