--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview",
     "test": "vitest",
     "tsc": "tsc",
+    "format": "prettier --write src/",
     "test:build": "vitest run",
     "coverage": "vitest run --coverage",
+    "prebuild": "npm run test:build",
     "postbuild": "@powershell copy 'dist/index.html' 'dist/200.html'"
   },
   "dependencies": {
@@ -25,6 +27,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -35,6 +38,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "happy-dom": "^9.20.3",
     "jsdom": "^22.0.0",
+    "prettier": "^2.8.8",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vitest": "^0.31.1"
