--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "happy-dom": "^9.20.3",
     "jsdom": "^22.0.0",
     "prettier": "^2.8.8",
+    "prettier-plugin-organize-imports": "^3.2.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vitest": "^0.31.1"
