--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
+    "spinners-react": "^1.0.7",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
