--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "deploy": "npm run build && surge ./dist/ rambunctious-vessel.surge.sh",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest",
@@ -41,6 +42,7 @@
     "jsdom": "^22.0.0",
     "prettier": "^2.8.8",
     "prettier-plugin-organize-imports": "^3.2.2",
+    "surge": "^0.23.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vitest": "^0.31.1"
