--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "spinners-react": "^1.0.7",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "ua-parser-js": "^1.0.37"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/ua-parser-js": "^0.7.39",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
@@ -44,7 +46,7 @@
     "prettier-plugin-organize-imports": "^3.2.2",
     "surge": "^0.23.1",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2",
+    "vite": "^4.5.2",
     "vitest": "^0.31.1"
   }
 }
