--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "spinners-react": "^1.0.7",
